[package]
name = "image2"
version = "0.11.4"
authors = ["Zach Shipko <zachshipko@gmail.com>"]
license = "ISC"
keywords = ["image", "image-processing"]
repository = "https://github.com/zshipko/image2-rs"
documentation = "https://docs.rs/image2"
description = "A simple image processing library"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
num = "0.3"
euclid = {version="0.22.1", optional=true}
lazy_static = {version="1.4.0", optional=true}
palette = {version="0.5", optional = true}
rayon = {version = "1", optional = true}
rscam = {version = "0.5", optional = true}
serde = {version = "1", optional = true, features=["derive"]}

[build-dependencies]
cc = "1"

[features]
default = ["io"]
io = []
filter = ["lazy_static"]
v4l = ["rscam"]
ser = ["serde", "palette/serde"]
parallel = ["rayon"]
transforms = ["euclid", "palette"]